# naija-twin

./: .env.example  .gitignore  DSN_BCT_Research_Dossier.docx  DSN_BCT_Research_Dossier.md  Makefile  Naija-Twin_Build_Manual.docx  Naija-Twin_Build_Manual.md  README.md  docker-compose.yml  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/naija_twin/: __init__.py  main.py
apps/api/naija_twin/cold_start/: __init__.py
apps/api/naija_twin/eval/: __init__.py
apps/api/naija_twin/generation/: __init__.py
apps/api/naija_twin/memory/: __init__.py
apps/api/naija_twin/nigerian/: __init__.py
apps/api/naija_twin/ranking/: __init__.py
apps/api/naija_twin/reflection/: __init__.py
apps/api/naija_twin/retrieval/: __init__.py
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/recommend/: route.ts
apps/web/app/api/simulate/: route.ts
apps/web/lib/: langfuse.ts
paper/: paper.md  references.bib
scripts/: build_naija_slice.py  download_datasets.sh  ingest_embeddings.py  quickstart.sh
