[project]
name = "naija-twin-api"
version = "0.1.0"
description = "Naija-Twin FastAPI sidecar: persona memory, retrieval, ranking, generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "langfuse>=2.0.0",
    "anthropic>=0.40.0",
    "groq>=0.13.0",
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "datasets>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["naija_twin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
